tasks/testsuite/fixtures/parser-misc/fail/stmt-class-static-blocks-in-ts-with-invalid-modifier-3.ts
class Foo { declare static { 1 + 1 }; }